--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,10 +1,10 @@
 contact_links:
   - name: ⚠️ Application issue
-    url: https://github.com/aniyomiorg/aniyomi/issues/new/choose
-    about: Issues and requests about the app itself should be opened in the aniyomi repository instead
-  - name: 📦 Aniyomi extensions
-    url: https://aniyomi.org/extensions
+    url: https://github.com/komikku-app/anikku/issues/new/choose
+    about: Issues and requests about the app itself should be opened in the Anikku repository instead
+  - name: 📦 Anikku extensions
+    url: https://anikku-app.github.io/extensions
     about: List of all available extensions with download links
-  - name: 🖥️ Aniyomi website
-    url: https://aniyomi.org/help/
+  - name: 🖥️ Anikku website
+    url: https://anikku-app.github.io/help/
     about: Guides, troubleshooting, and answers to common questions
