--- a/.github/ISSUE_TEMPLATE/report_issue.yml
+++ b/.github/ISSUE_TEMPLATE/report_issue.yml
@@ -1,5 +1,5 @@
 name: 🐞 Issue report
-description: Report an issue with aniyomi.org
+description: Report an issue with anikku-app.github.io
 labels: [Bug]
 body:
 
