--- a/.github/ISSUE_TEMPLATE/request_feature.yml
+++ b/.github/ISSUE_TEMPLATE/request_feature.yml
@@ -1,5 +1,5 @@
 name: ⭐ Feature request
-description: Suggest a feature to improve aniyomi.org
+description: Suggest a feature to improve anikku-app.github.io
 labels: [Feature request]
 body:
 
