--- a/website/package.json
+++ b/website/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "aniyomi-website",
+  "name": "anikku-app.github.io",
   "type": "module",
   "version": "3.0.0",
   "private": true,
   "packageManager": "pnpm@9.14.2",
-  "description": "(Stolen) Official website for the Aniyomi app.",
+  "description": "(Stolen) Official website for the Anikku app.",
   "license": "MPL-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aniyomiorg/aniyomi-website.git"
+    "url": "git+https://github.com/anikku-app/anikku-app.github.io.git"
   },
   "bugs": {
-    "url": "https://github.com/aniyomiorg/aniyomi-website/issues"
+    "url": "https://github.com/anikku-app/anikku-app.github.io/issues"
   },
   "engines": {
     "node": ">=20",
